artefacts: project -> upstream provider

--- a/system/artefacts/schemas/golang-project-exported-api.json
+++ b/system/artefacts/schemas/golang-project-exported-api.json
@@ -152,7 +152,7 @@
 			"uniqueItems": true
 		}
 	},
-	"required": ["artefact", "project", "commit", "packages"],
+	"required": ["artefact", "repository", "commit", "packages"],
 	"definitions": {
 		"identifier": {
 			"type": "object",
