Config: extend with working directory for simplefilestorage

--- a/system/config/infra.conf
+++ b/system/config/infra.conf
@@ -8,3 +8,6 @@ read: true
 
 [resources]
 client_dir: /var/lib/gofed/resource_client
+
+[simplefilestorage]
+working_directory: /var/lib/gofed/simplefilestorage
