Test Ansible playbook

--- a/ansible/playbooks/goexportedapidiff.yml
+++ b/ansible/playbooks/goexportedapidiff.yml
@@ -6,44 +6,4 @@
   roles:
   - role: gofedinfra
   tasks:
-  - fail:
-      msg: "hexsha1 variable is not set"
-    when: hexsha1 is undefined
-  - fail:
-      msg: "hexsha2 variable is not set"
-    when: hexsha2 is undefined
-  - fail:
-      msg: "repository variable is not set"
-    when: repository is undefined
-  - fail:
-      msg: "ipprefix variable is not set"
-    when: ipprefix is undefined
-
-  - name: Get exported Api 1
-    include: private/gocodeinspection.yml
-    vars:
-      commit: "{{ hexsha1 }}"
-  - set_fact:
-      exported_api_1: "{{ golang_project_exported_api }}"
-
-  - name: Get exported Api 2
-    include: private/gocodeinspection.yml
-    vars:
-      commit: "{{ hexsha2 }}"
-  - set_fact:
-      exported_api_2: "{{ golang_project_exported_api }}"
-
-  - name: Compare APIs
-    goapidiff:
-      exported_api_1: "{{ exported_api_1 }}"
-      exported_api_2: "{{ exported_api_2 }}"
-    register: apidiff_output
-
-  - debug: var=apidiff_output
-
-  - name: Store golang-projects-api-diff
-    artefactwriter:
-      artefact: "{{ apidiff_output.artefacts['golang-projects-api-diff'] | to_json }}"
-    register: woutput
-
-  - debug: var=woutput
+  - include: private/goexportedapidiff.yml
