--- a/ansible/playbooks/scanupstreamrepository.yml
+++ b/ansible/playbooks/scanupstreamrepository.yml
@@ -6,118 +6,4 @@
   roles:
   - role: gofedinfra
   tasks:
-  - fail:
-      msg: "repository variable is not set"
-    when: repository is undefined
-
-  - when: hexsha is defined
-    block:
-    - name: Retrieve golang-project-repository-commit
-      artefactreader:
-        artefact: golang-project-repository-commit
-        repository: "{{ repository }}"
-        hexsha: "{{ hexsha }}"
-      register: commit_output
-
-    - debug: var=commit_output
-
-    - when: not commit_output.found
-      block:
-      - name: Retrieve repository
-        repositoryretriever:
-          repository: "{{ repository }}"
-        register: routput
-
-      - debug: var=routput
-
-      - name: Extract commit info from the repository
-        repositorydataextractor:
-          repository: "{{ repository }}"
-          directory: "{{ routput.directory }}"
-          hexsha: "{{ hexsha }}"
-        register: ioutput
-
-      - name: Remove working directory
-        file:
-          name: "{{ routput.directory }}"
-          state: absent
-
-      - debug: var=ioutput.artefacts
-
-      - name: Store all golang-project-repository-commit artefacts
-        artefactwriter:
-          artefact: "{{ ioutput.artefacts['golang-project-repository-commit'][item] | to_json }}"
-        with_items: "{{ ioutput.artefacts['golang-project-repository-commit'] }}"
-
-  - when: hexsha is not defined
-    block:
-    - name: Retrieve repository info
-      artefactreader:
-        artefact: golang-project-repository-info
-        repository: "{{ repository }}"
-      register: info_output
-
-    - set_fact:
-        extract: true
-        current_info: {}
-
-    - when: info_output.found
-      block:
-      - set_fact:
-          current_info: "{{ info_output.artefact }}"
-
-      - name: Check if the commit date interval is covered
-        coveragechecker:
-          coverage: "{{ info_output.artefact['coverage'] }}"
-          from_date: "{{ from_date | default('') }}"
-          to_date: "{{ to_date | default('') }}"
-          from_ts: "{{ from_ts | default('') }}"
-          to_ts: "{{ to_ts | default('') }}"
-        register: commit_coverage
-
-      - set_fact:
-          extract: false
-        when: commit_coverage.covered
-
-      - debug: var=commit_coverage
-
-      - debug: var=extract
-
-    - when: extract
-      block:
-      - name: Retrieve repository
-        repositoryretriever:
-          repository: "{{ repository }}"
-        register: routput
-
-      - debug: var=routput
-
-      - name: Extract repository info for a given coverage interval
-        repositorydataextractor:
-          repository: "{{ repository }}"
-          directory: "{{ routput.directory }}"
-          from_date: "{{ from_date | default('') }}"
-          to_date: "{{ to_date | default('') }}"
-          from_ts: "{{ from_ts | default('') }}"
-          to_ts: "{{ to_ts | default('') }}"
-          info: "{{ info_output.artefact }}"
-        register: ioutput
-
-      - name: Remove working directory
-        file:
-          name: "{{ routput.directory }}"
-          state: absent
-
-      - debug: var=ioutput
-
-      - name: Store golang-project-repository-info
-        artefactwriter:
-          artefact: "{{ ioutput.artefacts['golang-project-repository-info'] | to_json }}"
-        register: woutput
-
-      - debug: var=woutput
-
-      - name: Store all golang-project-repository-commit artefacts
-        artefactwriter:
-          artefact: "{{ ioutput.artefacts['golang-project-repository-commit'][item] | to_json }}"
-        with_items: "{{ ioutput.artefacts['golang-project-repository-commit'] }}"
+  - include: private/scanupstreamrepository.yml
